--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,9 @@
-
+PORT= 3000
 
 DB_PASSWORD=PassPostgres
 DB_NAME=TesloDB
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
+
+JWT_SECRET= secreT
